--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <script src="./assets/js/easyzoom.js"></script>
+  <script src="./assets/js/slick.min.js"></script>
+  <script src="./assets/js/plugins.js"></script>
+  <script src="./assets/js/home.js"></script>
   <!-- <script src="./assets/js/home.js"></script> -->
 </head>
 <body>
