--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Web</title>
+  <title>nishOmi Designer Abayas</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="./assets/images/icon.png">
+  <link rel="apple-touch-icon" href="./assets/images/icon.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
